# homelab-playbooks

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  ansible.cfg  pyproject.toml
.config/: ansible-lint  yamllint
.config/molecule/: Dockerfile.j2  Dockerfile_debianbookworm  Dockerfile_ubuntu2004  config.yml
.github/workflows/: apache.yml  apache_vhosts.yml  apt.yml  base_setup.yml  blackbox_exporter.yml  docker.yml  gotify.yml  grafana.yml  kodi.yml  komodo_core.yml  komodo_periphery.yml  medusa.yml  miniflux.yml  nfs_client.yml  nfs_server.yml  node_exporter.yml  openvpn.yml  pihole.yml  prometheus.yml  prometheus_alertmanager.yml  prometheus_blackbox_exporter.yml  prometheus_node_exporter.yml  resolvconf.yml  sabnzbd.yml  ssl_cert.yml  transmission.yml  vikunja.yml
docs/: apache.md  apache_vhosts.md  apt.md  base_setup.md  blackbox_exporter.md  docker.md  gotify.md  grafana.md  kodi.md  komodo_core.md  komodo_periphery.md  medusa.md  miniflux.md  nfs_client.md  nfs_server.md  node_exporter.md  openvpn.md  pihole.md  prometheus.md  prometheus_alertmanager.md  prometheus_blackbox_exporter.md  prometheus_node_exporter.md  resolvconf.md  sabnzbd.md  ssl_cert.md  transmission.md  vikunja.md
hosts/: inventory
hosts/group_vars/: dns.yml  downloader.yml  monitoring.yml  searcher.yml
hosts/host_vars/: link.yml  lucifer.yml  merovingian.yml  morpheus.yml  neo.yml  satan.yml  trinity.yml
molecule/apache_vhosts/: converge.yml
molecule/apt/: converge.yml
molecule/base_setup/: converge.yml
molecule/docker/: converge.yml
molecule/gotify/: converge.yml
molecule/grafana/: converge.yml
molecule/kodi/: converge.yml
molecule/komodo_core/: converge.yml
molecule/komodo_periphery/: converge.yml  prepare.yml
molecule/medusa/: converge.yml
molecule/miniflux/: converge.yml
molecule/nfs_client/: converge.yml
molecule/nfs_server/: converge.yml
molecule/openvpn/: converge.yml
molecule/pihole/: converge.yml
playbooks/: base.yml  dns.yml  downloader.yml  link.yml  merovingian.yml  mifune.yml  monitoring.yml  morpheus.yml  neo.yml  searcher.yml  trinity.yml
(+363 files in other folders)
