[project]
name = "homelab-playbooks"
version = "0.1.0"
description = ""
authors = [
  {name = "Bakie", email = "bakelants.developer@gmail.com"}
]
readme="README.md"
requires-python = ">=3.13"
dependencies = [
  "ansible (>=11.8.0,<12.0.0)",
  "github3-py (>=4.0.1,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
molecule = "^25.6.0"
molecule-plugins = {version = "^23.7.0", extras = ["docker"]}
docker = "^7.1.0"
pytest-testinfra = "^10.2.2"
pre-commit = "^4.2.0"
pytest-ansible = "^v25.6.3"

[tool.pytest.ini_options]
norecursedirs="molecule"
# testinfra and pytest-ansible conflict as pytest
# plugins. We disable testinfra when running "all" tests,
# and disable `pytest-ansible` when running each molecule test
addopts = "-p no:pytest11.testinfra"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
